--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 
     </main>
-    <footer><p>&copy; Todos los derechos reservados</p></footer>
+    <!-- <footer><p>&copy; Todos los derechos reservados</p></footer> -->
 </body>
 
 </html>
